<resources>
    <string name="app_name">WhatToDo</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_add_public_event">New Public Event</string>
    <string name="title_EventName">Event Name</string>
    <string name="nextButton">NEXT</string>
    <string name="title_date">Date</string>
    <string name="title_eventStartTimre">Event Start Time</string>
    <string name="init_setTime">hh:mm</string>
    <string name="title_endTime">Event End Time</string>
    <string name="init_endTime">hh:mm</string>
    <string name="title_name">Event Name</string>
    <string name="title_description">Descrption</string>
    <string name="date_title">Date:(CLICK TO SET)</string>
    <string name="title_descp">Descrption</string>
    <string name="default_date">mm/dd/yyyy</string>
    <string name="title_NewPrivateEvent">New Private Event</string>
    <string name="title_EventStartTime">Event Start Time</string>
    <string name="title_des">Description</string>
    <string name="title_impLvl">Importance Level</string>
    <string name="title_createButton">CREATE</string>
    <string name="title_resetButton">RESET</string>
    <string name="title_cancelButton">CANCEL</string>
    <string-array name="LOCATIONS">
        <item>Burke</item>
        <item>Junker</item>
        <item>OBS</item>
        <item>Reed</item>
        <item>N/A</item>
    </string-array>


</resources>
