<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ac.behrendapp.whattodo.CreatePublicEvent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title_CreateNewEvent"
        android:id="@+id/title_CreateNewEvent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Event Location"
        android:id="@+id/title_loc"

        android:layout_below="@+id/eventName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nextButton"
        android:id="@+id/nextButton"
        android:onClick="onNextClick"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/eventName"
        android:layout_alignEnd="@+id/eventName" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Loc_Spinner"
        android:spinnerMode="dropdown"
        android:layout_below="@+id/title_loc"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/title_startTime"
        android:layout_alignEnd="@+id/title_startTime" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/title_eventStartTimre"
        android:id="@+id/title_startTime"
        android:layout_below="@+id/Loc_Spinner"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/title_endTime"
        android:id="@+id/textView"
        android:layout_below="@+id/date"
        android:layout_alignRight="@+id/nextButton"
        android:layout_alignEnd="@+id/nextButton" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/start_time"
        android:clickable="true"
        android:text="@string/init_setTime"
        android:onClick="onStartTimeClick"
        android:layout_alignTop="@+id/end_time"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/end_time"
        android:text="@string/init_endTime"
        android:onClick="onEndTimeClick"
        android:layout_below="@+id/textView"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:layout_alignRight="@+id/textView"
        android:layout_alignEnd="@+id/textView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/title_name"
        android:id="@+id/title_name"
        android:layout_marginTop="24dp"
        android:layout_below="@+id/title_CreateNewEvent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/eventName"
        android:layout_below="@+id/title_name"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/date_title"
        android:id="@+id/dateTitle"
        android:layout_below="@+id/eventName"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/title_descp"
        android:id="@+id/textView2"
        android:layout_below="@+id/start_time"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/des"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/nextButton"
        android:layout_alignEnd="@+id/nextButton" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/default_date"
        android:id="@+id/date"
        android:layout_below="@+id/dateTitle"
        android:layout_alignLeft="@+id/dateTitle"
        android:layout_alignStart="@+id/dateTitle"
        android:layout_alignRight="@+id/eventName"
        android:layout_alignEnd="@+id/eventName"
        android:onClick="onDateClick"
        android:shadowColor="#abdafa"
        android:textColor="#3d7cf1"
        android:layout_alignBottom="@+id/Loc_Spinner" />


</RelativeLayout>
